@@ -1,0 +1,74 @@
+@base <http://example.org/> .
+@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
+
+[
+	<boolean> " false "^^xsd:boolean ,
+		" 0 "^^xsd:boolean ,
+		" true "^^xsd:boolean ,
+		" 1 "^^xsd:boolean ,
+		" ja "^^xsd:boolean ,
+		""^^xsd:boolean ;
+	<ieee754> " +0100.0 "^^xsd:float ,
+		" -0100.0 "^^xsd:float ,
+		" +01000.0 "^^xsd:double ,
+		" -01000.0 "^^xsd:double ;
+	<machine> " +09223372036854775807 "^^xsd:long ,
+		" -09223372036854775808 "^^xsd:long ,
+		" +02147483647 "^^xsd:int ,
+		" -02147483648 "^^xsd:int ,
+		" +032767 "^^xsd:short ,
+		" -032768 "^^xsd:short ,
+		" +0127 "^^xsd:byte ,
+		" -0128 "^^xsd:byte ,
+		" +01 "^^xsd:unsignedLong ,
+		" 018446744073709551615 "^^xsd:unsignedLong ,
+		" +01 "^^xsd:unsignedInt ,
+		" 04294967295 "^^xsd:unsignedInt ,
+		" +01 "^^xsd:unsignedShort ,
+		" 065535 "^^xsd:unsignedShort ,
+		" +01 "^^xsd:unsignedByte ,
+		" 0255 "^^xsd:unsignedByte ;
+	<decimal> " 00 "^^xsd:decimal ,
+		" +0 "^^xsd:decimal ,
+		" -0 "^^xsd:decimal ,
+		" 36893488147419103232 "^^xsd:decimal ,
+		" 0036893488147419103232 "^^xsd:decimal ,
+		" +36893488147419103232 "^^xsd:decimal ,
+		" +0036893488147419103232 "^^xsd:decimal ,
+		" +0036893488147419103232. "^^xsd:decimal ,
+		" +0036893488147419103232.00 "^^xsd:decimal ,
+		" +0036893488147419103232.12300 "^^xsd:decimal ,
+		" -36893488147419103232 "^^xsd:decimal ,
+		" -0036893488147419103232 "^^xsd:decimal ,
+		" -0036893488147419103232. "^^xsd:decimal ,
+		" -0036893488147419103232.00 "^^xsd:decimal ,
+		" -0036893488147419103232.12300 "^^xsd:decimal ,
+		" 00.12300 "^^xsd:decimal ,
+		" .12300 "^^xsd:decimal ,
+		" +.12300 "^^xsd:decimal ,
+		" +00.12300 "^^xsd:decimal ,
+		" -.12300 "^^xsd:decimal ,
+		" -00.12300 "^^xsd:decimal ,
+		" junk 1234.5678 "^^xsd:decimal ,
+		" 1234.5678 junk "^^xsd:decimal ;
+	<integer> " 36893488147419103232 "^^xsd:integer ,
+		" 0036893488147419103232 "^^xsd:integer ,
+		" +36893488147419103232 "^^xsd:integer ,
+		" +0036893488147419103232 "^^xsd:integer ,
+		" -36893488147419103232 "^^xsd:integer ,
+		" -0036893488147419103232 "^^xsd:integer ,
+		" junk 987654321 "^^xsd:integer ,
+		" 987654321 junk "^^xsd:integer ,
+		" 00 "^^xsd:nonPositiveInteger ,
+		" -036893488147419103232 "^^xsd:nonPositiveInteger ,
+		" -01 "^^xsd:negativeInteger ,
+		" -036893488147419103232 "^^xsd:negativeInteger ,
+		" 00 "^^xsd:nonNegativeInteger ,
+		" 036893488147419103232 "^^xsd:nonNegativeInteger ,
+		" +01 "^^xsd:positiveInteger ,
+		" 036893488147419103232 "^^xsd:positiveInteger ;
+	<other> "untyped" ,
+		<uri> ,
+		"notxsd"^^<sometype> ,
+		"unsupported"^^xsd:name
+] .
